--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -25,7 +25,7 @@
       android:layout_marginTop="24dp"
       android:fontFamily="@font/abril_fatface"
       android:text="VIE"
-      android:textColor="@color/whitee"
+      android:textColor="@color/white"
       android:textSize="40dp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
