--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -20,7 +20,7 @@
     <style name="TextAppearance.AppCompat.Widget.ActionBar.Title" parent="@style/TextAppearance.AppCompat">
 
         <item name="android:textSize">25dp</item>
-        <item name="android:textColor">@color/whitee</item>
+        <item name="android:textColor">@color/white</item>
 
     </style>
 
