--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Bruh" parent="Theme.AppCompat.DayNight">
+    <style name="Theme.Bruh" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorAccent">@color/purple_700</item>
+        <item name="colorAccent">@color/white</item>
         <item name="colorPrimaryDark">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorError">@color/teal_200</item>
@@ -13,17 +13,5 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimary</item>
         <!-- Customize your theme here. -->
     </style>
-    <style name="Theme.Bruh.NoActionBar">
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
-    </style>
-    <style name="TextAppearance.AppCompat.Widget.ActionBar.Title" parent="@style/TextAppearance.AppCompat">
 
-        <item name="android:textSize">25dp</item>
-        <item name="android:textColor">@color/white</item>
-
-    </style>
-
-    <style name="Theme.Bruh.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
-    <style name="Theme.Bruh.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
