--- a/app/src/main/res/menu/home_menu.xml
+++ b/app/src/main/res/menu/home_menu.xml
@@ -5,10 +5,15 @@
     <item android:id="@+id/search"
         android:icon="@drawable/ic_baseline_search_24"
         android:title="Search"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="ifRoom"
+        app:actionViewClass="androidx.appcompat.widget.SearchView" />
 
     <item android:id="@+id/maps"
         android:title="Map" />
+
+    <item android:id="@+id/search_bruh"
+        android:title="search"/>
+
 
     <item android:id="@+id/logout"
         android:title="Logout" />
