--- a/app/src/main/res/layout/activity_find.xml
+++ b/app/src/main/res/layout/activity_find.xml
@@ -10,17 +10,17 @@
         android:id="@+id/fragment_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/bottom_navigation"/>
+        android:layout_above="@+id/bottom_navigation" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        app:menu="@menu/bottom_navigation"
+        android:background="@color/logo"
         app:itemIconTint="@color/white"
         app:itemTextColor="@color/white"
-        android:background="@color/logo"/>
+        app:menu="@menu/bottom_navigation" />
 
     <ListView
         android:id="@+id/listview"
@@ -28,7 +28,6 @@
         android:layout_height="wrap_content"
         android:background="@color/white"
         android:translationZ="90dp" />
-
 
 
 </RelativeLayout>
